--- a/Source/Engine/Renderer/Renderer.vcxproj
+++ b/Source/Engine/Renderer/Renderer.vcxproj
@@ -203,6 +203,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\ThirdParty\imgui\Gui.h" />
@@ -213,6 +214,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
