--- a/Source/Engine/Renderer/Renderer.vcxproj.filters
+++ b/Source/Engine/Renderer/Renderer.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_widgets.cpp">
       <Filter>Source\IMGUI</Filter>
     </ClCompile>
+    <ClCompile Include="VertexBuffer.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -82,6 +85,9 @@
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\ThirdParty\imgui\Gui.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexBuffer.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
