--- a/Source/Engine/Renderer/Renderer.vcxproj
+++ b/Source/Engine/Renderer/Renderer.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Font.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Renderer.cpp" />
@@ -208,6 +209,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\ThirdParty\imgui\Gui.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Renderer.h" />
