--- a/Source/Engine/Renderer/Renderer.vcxproj
+++ b/Source/Engine/Renderer/Renderer.vcxproj
@@ -200,6 +200,7 @@ xcopy "$(ThirdPartyDir)assimp\lib\$(Configuration)\*.dll" "$(SolutionDir)Build" 
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_impl_sdlrenderer.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Cubemap.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Model.cpp" />
@@ -212,6 +213,7 @@ xcopy "$(ThirdPartyDir)assimp\lib\$(Configuration)\*.dll" "$(SolutionDir)Build" 
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\ThirdParty\imgui\Gui.h" />
+    <ClInclude Include="Cubemap.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
