--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -149,11 +149,26 @@
     <None Include="..\..\Build\Assets\Shaders\cubemap.frag">
       <Filter>Shaders\cubemap</Filter>
     </None>
-    <None Include="..\..\Build\Assets\Shaders\cubemap.prog">
-      <Filter>Shaders\cubemap</Filter>
-    </None>
     <None Include="..\..\Build\Assets\Shaders\cubemap.vert">
       <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\reflection.prog">
+      <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\reflection.vert">
+      <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\reflection.mtrl">
+      <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\refaction.prog">
+      <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\refaction.vert">
+      <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\refraction.mtrl">
+      <Filter>Materials</Filter>
     </None>
   </ItemGroup>
 </Project>
