--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -187,10 +187,10 @@
     <None Include="..\..\Build\Assets\Shaders\lit_texture.vert" />
     <None Include="..\..\Build\Assets\Shaders\multi_lit_texture.frag" />
     <None Include="..\..\Build\Assets\Shaders\multi_lit_texture.prog" />
-    <None Include="..\..\Build\Assets\Shaders\refaction.prog" />
-    <None Include="..\..\Build\Assets\Shaders\refaction.vert" />
     <None Include="..\..\Build\Assets\Shaders\reflection.prog" />
     <None Include="..\..\Build\Assets\Shaders\reflection.vert" />
+    <None Include="..\..\Build\Assets\Shaders\refraction.prog" />
+    <None Include="..\..\Build\Assets\Shaders\refraction.vert" />
     <None Include="..\..\Build\Assets\Shaders\skybox.frag" />
     <None Include="..\..\Build\Assets\Shaders\skybox.prog" />
     <None Include="..\..\Build\Assets\Shaders\skybox.vert" />
