--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -161,14 +161,14 @@
     <None Include="..\..\Build\Assets\Materials\reflection.mtrl">
       <Filter>Materials</Filter>
     </None>
-    <None Include="..\..\Build\Assets\Shaders\refaction.prog">
-      <Filter>Shaders\cubemap</Filter>
-    </None>
-    <None Include="..\..\Build\Assets\Shaders\refaction.vert">
-      <Filter>Shaders\cubemap</Filter>
-    </None>
     <None Include="..\..\Build\Assets\Materials\refraction.mtrl">
       <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\refraction.prog">
+      <Filter>Shaders\cubemap</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Shaders\refraction.vert">
+      <Filter>Shaders\cubemap</Filter>
     </None>
   </ItemGroup>
 </Project>
