fixed up rotate component and I added a framebuffer and world06

--- a/Source/Engine/Renderer/Renderer.vcxproj
+++ b/Source/Engine/Renderer/Renderer.vcxproj
@@ -202,6 +202,7 @@ xcopy "$(ThirdPartyDir)assimp\lib\$(Configuration)\*.dll" "$(SolutionDir)Build" 
     <ClCompile Include="..\..\ThirdParty\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Cubemap.cpp" />
     <ClCompile Include="Font.cpp" />
+    <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Program.cpp" />
@@ -215,6 +216,7 @@ xcopy "$(ThirdPartyDir)assimp\lib\$(Configuration)\*.dll" "$(SolutionDir)Build" 
     <ClInclude Include="..\..\ThirdParty\imgui\Gui.h" />
     <ClInclude Include="Cubemap.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Program.h" />
