--- a/Source/Application/Application.vcxproj
+++ b/Source/Application/Application.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="World05.cpp" />
     <ClCompile Include="World06.cpp" />
     <ClCompile Include="World07.cpp" />
+    <ClCompile Include="World08.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Core\Core.vcxproj">
@@ -166,9 +167,12 @@
     <ClInclude Include="World05.h" />
     <ClInclude Include="World06.h" />
     <ClInclude Include="World07.h" />
+    <ClInclude Include="World08.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Build\Assets\Fantasy\fantasy.mtrl" />
+    <None Include="..\..\Build\Assets\Fantasy\fantasy_cel.mtrl" />
+    <None Include="..\..\Build\Assets\Materials\cel.mtrl" />
     <None Include="..\..\Build\Assets\Materials\framebuffer.mtrl" />
     <None Include="..\..\Build\Assets\Materials\grid.mtrl" />
     <None Include="..\..\Build\Assets\Materials\multi.mtrl" />
@@ -186,11 +190,15 @@
     <None Include="..\..\Build\Assets\Scenes\scene.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_framebuffer.json" />
     <None Include="..\..\Build\Assets\Scenes\scene_shadow.json" />
+    <None Include="..\..\Build\Assets\Scenes\scene_shadow_cel.json" />
     <None Include="..\..\Build\Assets\Shaders\cubemap.frag" />
     <None Include="..\..\Build\Assets\Shaders\cubemap.vert" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong.frag" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong.prog" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong.vert" />
+    <None Include="..\..\Build\Assets\Shaders\lit_phong_cel.frag" />
+    <None Include="..\..\Build\Assets\Shaders\lit_phong_cel.prog" />
+    <None Include="..\..\Build\Assets\Shaders\lit_phong_cel.vert" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong_normal.frag" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong_normal.prog" />
     <None Include="..\..\Build\Assets\Shaders\lit_phong_normal.vert" />
