--- a/Source/Application/Application.vcxproj.filters
+++ b/Source/Application/Application.vcxproj.filters
@@ -263,5 +263,14 @@
     <None Include="..\..\Build\Assets\Shaders\lit_phong_cel.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\..\Build\Assets\Scenes\scene_editor.json">
+      <Filter>Scenes</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\basic.mtrl">
+      <Filter>Materials</Filter>
+    </None>
+    <None Include="..\..\Build\Assets\Materials\ui_camera.mtrl">
+      <Filter>Materials</Filter>
+    </None>
   </ItemGroup>
 </Project>
