--- a/Source/Engine/Renderer/Renderer.vcxproj.filters
+++ b/Source/Engine/Renderer/Renderer.vcxproj.filters
@@ -70,6 +70,12 @@
     <ClCompile Include="Framebuffer.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Editor.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\ThirdParty\imgui\ImFileDialog.cpp">
+      <Filter>Source\IMGUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -107,6 +113,12 @@
     </ClInclude>
     <ClInclude Include="Framebuffer.h">
       <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Editor.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\ThirdParty\imgui\ImFileDialog.h">
+      <Filter>Source\IMGUI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
